--- a/css/styles.css
+++ b/css/styles.css
@@ -98,3 +98,22 @@ a {
     font-size: 1.2rem;
   }
 }
+/*Lists*/
+.lists {
+  list-style: none;
+  padding: 0;
+  color: var(--color-headings);
+}
+.list--tick {
+  list-style-image: url(../images/tick.svg);
+  padding-left: 3rem;
+}
+.list--tick.list__items {
+  padding-left: 0.5rem;
+  margin-bottom: 1rem;
+}
+@media screen {
+  .list--tick.list__items {
+    padding-left: 0;
+  }
+}
