--- a/css/styles.css
+++ b/css/styles.css
@@ -117,3 +117,19 @@ a {
     padding-left: 0;
   }
 }
+/*Icons*/
+.icons {
+  width: 40px;
+  height: 40px;
+}
+.icon--primary {
+  fill: var(--color-primary);
+}
+.icon-container {
+  background: #f3f5f9;
+  width: 64px;
+  border-radius: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
